objects/EUR_CRM_Payment_Term__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Payment_Term_Picklist_Value__c</fullName>
        <label>Payment Term Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Payment_Term_Unique_Value_Name__c</fullName>
        <formula>EUR_CRM_Payment_Term_Unique_Values__r.EUR_CRM_Payment_Term_Unique_Value_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term Unique Value Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Payment_Term_Unique_Values__c</fullName>
        <label>Payment Term Unique Value Id</label>
        <referenceTo>EUR_CRM_Payment_Term_Unique_Values__c</referenceTo>
        <relationshipName>EUR_Payment_Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Payment Term (EU)</label>
    <nameField>
        <displayFormat>EPT-{0000000000}</displayFormat>
        <label>Payment Term Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Terms (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_Payment_Term</fullName>
        <active>true</active>
        <label>Payment Term</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Payment_Term</fullName>
        <active>true</active>
        <label>EUR DE Payment Term</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>